# OpenPose_with_Distributedprocessing

./: .gitignore  CMakeLists.txt  README.md  downloadsecondtime.bat  get_3rdparty.bat  get_models.bat  readme.md  run_worker.bat  workerbuild.bat
Protos/: openpose.proto
examples/: CMakeLists.txt
examples/user_code/: CMakeLists.txt  WorkerHttp.cpp  WorkerHttp_v1_0_2.cpp
server/: OpenPoseServer.deps.json  OpenPoseServer.staticwebassets.endpoints.json  OpenPoseServer.staticwebassets.runtime.json
server/OpenPoseServer/: OpenPoseServer.sln
server/OpenPoseServer/OpenPoseServer/: ApiModels.cs  AvailableWorkers.cs  Constructor.cs  Dockerfile  Dockerfile.original  MultiProcess.cs  OpenPoseServer.csproj  OpenPoseServer.http  Program.cs  SingleProcess.cs
server/OpenPoseServer/OpenPoseServer/Controllers/: HomeController.cs
server/OpenPoseServer/OpenPoseServer/Views/: _ViewImports.cshtml
server/OpenPoseServer/OpenPoseServer/Views/Shared/: _Layout.cshtml
server/OpenPoseServer/OpenPoseServer/wwwroot/: index.html  index1.html
server/OpenPoseServer/OpenPoseServer/wwwroot/js/: site.js
server/wwwroot/: index.html
server/wwwroot/js/: site.js
